# digital-objects-e2e-poc

./: .env.default  .gitignore  Cargo.toml  README.md  flow-synchronizer.sh  full-flow.sh  network.yml  predicates.md  rustfmt.toml  scratch  shell.nix  wait-sync-epoch.sh
ad-server/: Cargo.toml
ad-server/src/: endpoints.rs  eth.rs  main.rs
app/: Cargo.toml
app/src/: eth.rs  lib.rs  main.rs
app_cli/: Cargo.toml
app_cli/src/: eth.rs  lib.rs  main.rs
app_gui/: Cargo.toml
app_gui/src/: app.rs  crafting.rs  destruction.rs  item_view.rs  main.rs  task_system.rs  utils.rs
commitlib/: Cargo.toml  scratch
commitlib/src/: lib.rs  predicates.rs
common/: Cargo.toml
common/src/: disk.rs  groth.rs  lib.rs  payload.rs  shrink.rs
craftlib/: Cargo.toml
craftlib/src/: constants.rs  item.rs  lib.rs  pow.rs  powpod.rs  predicates.rs  test_util.rs  util.rs  vdfpod.rs
digital-objects/: Cargo.toml
digital-objects/src/: lib.rs
gui_app/: Cargo.toml
gui_app/src/: main.rs
pod2lib/: Cargo.toml
pod2lib/src/: macros.rs
pod2utils/: Cargo.toml
pod2utils/src/: lib.rs  macros.rs
synchronizer/: Cargo.toml  file_blob_str
synchronizer/src/: endpoints.rs  lib.rs  main.rs
synchronizer/src/clients/: common.rs
synchronizer/src/clients/beacon/: mod.rs
