[workspace]
members = [
    "craftlib",
    "commitlib",
    "synchronizer",
    "common",
    "pod2utils",
    "app",
]
resolver = "3"

[workspace.dependencies]
# common
anyhow = "1.0.56"
itertools = "0.14.0"
dotenvy = "0.15.7"

# logging
env_logger = { version = "0.11" }
log = { version = "0.4.14", features = ["kv_unstable"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter" ] }
tracing-log = "0.1.1"

# pod
# pod2 = { git="https://github.com/0xPARC/pod2", rev = "707c14db14d03485c68045a903771591e533ba59", default-features = false, features = ["backend_plonky2", "disk_cache", "zk"]}
pod2 = { path="../pod2_polish-interf", default-features = false, features = ["backend_plonky2", "disk_cache", "zk"]}
plonky2 = { git = "https://github.com/0xPARC/plonky2.git", rev = "109d517d09c210ae4c2cee381d3e3fbc04aa3812" }
pod2_onchain = { git = "https://github.com/0xPARC/pod2-onchain.git", rev = "5f2047752349a0f06665bc8f6ba82f50bc5ad435", default-features=false, features = ["disk_cache"]}

# eth
alloy = { version = "1.0.41", features = [
    "eips",
    "full",
    "json-rpc",
    "hyper", #
    "transport-http", #
    "signer-local", #
    "rpc-client",
    "rpc-types-beacon"
] }
tokio = {version="1.45", features = ["rt-multi-thread", "macros", "sync"]}

hex = "0.4.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.143"
minicbor-serde = { version = "0.6.1", features = ["std"] }
warp = "0.3"

# temporarily patch pod2 version, since it is constantly updated, to avoid
# updating pod2-onchain usage of it each time
[patch."https://github.com/0xPARC/pod2"]
# pod2 = { git = "https://github.com/0xPARC/pod2?rev=main", rev = "707c14db14d03485c68045a903771591e533ba59" }
pod2 = { path="../pod2_polish-interf", default-features = false, features = ["backend_plonky2", "disk_cache", "zk"]}

# [profile.release]
# debug = true
