[package]
name = "app_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
plonky2 = { workspace = true }
pod2 = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5.47", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["blocking"] }
rand = { version = "0.9.2", features = ["std_rng"] }

common = { path = "../common" }
craftlib = { path = "../craftlib" }
commitlib = { path = "../commitlib" }
pod2utils = { path = "../pod2utils" }
