[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
pod2 = { workspace = true }
plonky2 = { workspace = true }
pod2_onchain = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
itertools = "0.14.0"
tracing = { workspace = true }
